# file-to-loki-log-forwarder

./: .gitignore  Dockerfile  Makefile  README.md  install_vector.sh  pyproject.toml  test.sh
.github/workflows/: ci.yml  renovate.yml
conf/: .gitignore  vector.yaml.jinja
tests/: test_config.py
