[project]
name = "file-to-loki-log-forwarder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jinja2",
    "stlog",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "ruff>=0.11.9",
    "types-pyyaml>=6.0.12.20250402",
]
